--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
+  flutter_animate: ^4.5.1
+  cloud_firestore: ^5.5.0
+  intl: ^0.19.0
+  fluttertoast: ^8.2.8
+  flutter_slidable: ^3.1.1
+  firebase_database: ^11.1.6
+  easy_date_timeline: ^2.0.4
 
 dev_dependencies:
   flutter_test:
